Adicionando cores para receita e despesa

--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -20,20 +20,22 @@
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/menu_despesa"
+            android:onClick="adicionarDespesa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_add_24"
-            fab:fab_colorNormal="@color/colorAccent"
+            fab:fab_colorNormal="@color/colorPrimaryDespesa"
             fab:fab_label="Despesa"
             fab:fab_size="mini"
             />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/menu_receita"
+            android:onClick="adicionarReceita"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_add_24"
-            fab:fab_colorNormal="@color/colorAccent"
+            fab:fab_colorNormal="@color/colorPrimaryReceita"
             fab:fab_label="Receita"
             fab:fab_size="mini"
             />
