--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -10,62 +10,61 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="571dp"
-        android:layout_gravity="bottom"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-            android:id="@+id/calendarView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="bottom"
-            app:mcv_tileSize="50dp"
-            fab:mcv_selectionColor="#00F"
-            fab:mcv_showOtherDates="all" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerMovimentacao"
-            android:layout_width="match_parent"
-            android:layout_height="327dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textSaudacao"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="160dp"
+            android:background="@color/colorPrimary"
             android:gravity="center"
-            android:text="Carregando..."
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textSaldo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="R$ 0"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="24sp" />
+            <TextView
+                android:id="@+id/textSaudacao"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Carregando..."
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/textView10"
+            <TextView
+                android:id="@+id/textSaldo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="R$ 0"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Saldo Geral"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Saldo Geral"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+                android:id="@+id/calendarView"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:mcv_tileSize="50dp"
+                fab:mcv_selectionColor="#00F"
+                fab:mcv_showOtherDates="all" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <com.github.clans.fab.FloatingActionMenu
