--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -72,6 +72,7 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerMovimentos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
